welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:12: error: ';' expected but 'false' found.
    rteurn false
           ^